# bobbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: check.yml  docker.yml  publish.yml  release.yml  rust.yml  test.yml
docs/: index.html
migrations/2021-06-17-004535_create_command_channels/: down.sql  up.sql
migrations/2021-06-17-145216_create_deletion_times/: down.sql  up.sql
migrations/2021-06-19-012714_create_channels_created/: down.sql  up.sql
migrations/2021-07-11-210309_create_presets/: down.sql  up.sql
src/: main.rs
src/args/: mod.rs
src/basics/: args.rs  channel.rs  command.rs  guilds.rs  mod.rs  permows.rs  presets.rs  result.rs  voice.rs
src/checks/: author_connected_to_voice.rs  bob_has_category.rs  command_channel.rs  mod.rs  preset_exists.rs  preset_has_valid_name.rs  sent_in_bob.rs  server_permissions.rs
src/commands/: build.rs  config.rs  mod.rs  save.rs
src/commands/bob/: build.rs  list.rs  load.rs  mod.rs  save.rs
src/database/: convert.rs  mod.rs  models.rs  schema.rs
src/errors/: mod.rs
src/extensions/: command.rs  mod.rs  presets.rs  voice.rs
src/tasks/: build.rs  clean.rs  mod.rs  mov.rs
src/utils/: channel_names.rs  clear_temp_channel.rs  command_router.rs  create_temp_channel.rs  discord_display.rs  mod.rs  permission_overwrites.rs
