[package]
name = "bobbot"
version = "0.6.0"
authors = ["Stefano Pigozzi <ste.pigozzi@gmail.com>"]
edition = "2018"
description = "A Discord bot for creating and destroying temporary voice channels"
readme = "README.md"
repository = "https://github.com/Steffo99/bob-bot"
license = "AGPL-3.0-or-later"
keywords = ["discord", "discord-bot"]
categories = ["command-line-utilities"]

[badges]
maintenance = {status = "actively-developed"}

[dependencies]

[dependencies.serenity]
version = "0.9.3"
features = [
    "cache",
    "framework",
    "standard_framework"
]

[dependencies.once_cell]
version = "1.4.1"

[dependencies.regex]
version = "1.3.9"

[dependencies.log]
version = "0.4.11"

[dependencies.pretty_env_logger]
version = "0.4.0"

[dependencies.toml]
version = "0.5.6"

[dependencies.serde]
version = "1.0.115"

[dependencies.tokio]
version = "0.2.22"
features = [
    "full"
]

[dependencies.num-traits]
version = "0.2"
