[package]
name = "bobbot"
version = "0.10.2"
authors = ["Stefano Pigozzi <ste.pigozzi@gmail.com>"]
edition = "2018"
description = "A Discord bot for creating and destroying temporary voice channels"
readme = "README.md"
repository = "https://github.com/Steffo99/bob-bot"
license = "AGPL-3.0-or-later"
keywords = ["discord", "discord-bot"]
categories = ["command-line-utilities"]

[dependencies]

[dependencies.serenity]
version = "^0.10.8"
default-features = false
features = [
    "cache",
    "model",
    "unstable_discord_api",
    "rustls_backend",
    "builder",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
]

[dependencies.once_cell]
version = "^1.8.0"

[dependencies.regex]
version = "^1.5.4"

[dependencies.log]
version = "^0.4.14"

[dependencies.pretty_env_logger]
version = "^0.4.0"

[dependencies.toml]
version = "^0.5.8"

[dependencies.serde]
version = "^1.0.126"

[dependencies.tokio]
version = "^1.6.1"
features = [
    "full"
]

[dependencies.num-traits]
version = "^0.2.14"

[dependencies.diesel]
version = "^1.4.4"
features = [
    "postgres",
    "32-column-tables",
    "numeric",
    "serde_json",
]

[dependencies.diesel_migrations]
version = "^1.4.0"

[dependencies.serde_json]
version = "^1.0.64"

[dependencies.dotenv]
version = "^0.15.0"

[dependencies.indoc]
version = "^1.0.3"

[dependencies.async-trait]
version = "^0.1.50"
